--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,23 +9,50 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.example.roomapp"
+        applicationId "com.example.notedapp"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.debug
+
     }
     buildFeatures{
         viewBinding {
             enabled = true}
+        dataBinding {
+            enabled = true}
     }
 
     buildTypes {
-        release {
+        debug{
             minifyEnabled false
+            debuggable true
+        }
+        qa{
+            minifyEnabled false
+            debuggable false
+        }
+        release {
+            minifyEnabled true
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    flavorDimensions "version"
+    productFlavors{
+        demo{
+            dimension "version"
+            applicationIdSuffix ".demo"
+            versionNameSuffix ".demo"
+        }
+        full{
+            dimension "version"
+            applicationIdSuffix ".full"
+            versionNameSuffix ".full"
         }
     }
 
@@ -70,5 +97,23 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
+
+    //koin
+    implementation "org.koin:koin-android-viewmodel:2.0.1"
+    implementation "org.koin:koin-android:2.0.1"
+
+    //dagger
+    implementation  "com.google.dagger:dagger-android-support:2.12"
+    kapt "com.google.dagger:dagger-compiler:2.12"
+    kapt "com.google.dagger:dagger-android-processor:2.12"
+
+    //mock
+    testImplementation 'org.mockito:mockito-core:2.28.2'
+    androidTestImplementation 'org.mockito:mockito-android:2.24.5'
+
+    //Junit
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "com.google.truth:truth:1.1.2"
 
 }
