--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,10 +83,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
 
     // Room components
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
+    implementation "androidx.room:room-runtime:2.2.4"
+    kapt "androidx.room:room-compiler:2.2.4"
+    implementation "androidx.room:room-ktx:2.2.4"
+    androidTestImplementation "androidx.room:room-testing:2.2.4"
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -103,9 +103,9 @@ dependencies {
     implementation "org.koin:koin-android:2.0.1"
 
     //dagger
-    implementation  "com.google.dagger:dagger-android-support:2.12"
-    kapt "com.google.dagger:dagger-compiler:2.12"
-    kapt "com.google.dagger:dagger-android-processor:2.12"
+//    implementation  "com.google.dagger:dagger-android-support:2.12"
+    implementation  "com.google.dagger:dagger-compiler:2.33"
+    kapt  "com.google.dagger:dagger-android-processor:2.33"
 
     //mock
     testImplementation 'org.mockito:mockito-core:2.28.2'
